Read why nothing is left off what is fixed, not off how it came to be fixed
The proof of emptiness was whatever contradiction a fixing happened to meet first,
kept from then on. Two positions fixed at values neither can take are two
contradictions, and the same pair fixed the other way round named the other one —
so the answer carried the order the questions were asked in, which is the caller's
business and not the model's. This branch's own algebra says of what is proved
empty exactly what it says of what is left, and this broke it.

What was wrong is the shape the rest of this branch has been about: something that
belongs to how an answer was reached was kept in the answer. So nothing is
remembered along the way. What is held is what was fixed, and why nothing is left
is worked out from it when it is asked for.

Fixing accumulates as the least and the greatest of the values fixed at each term
rather than as the last one to arrive, so a position fixed twice holds both however
they came in and the two are the same where it was fixed once. What is fixed is
kept in the order it arrived rather than as an immutable copy, whose iteration is
salted once per run — read off that, which of two contradictions a proof names
would move between runs of the same compiler — and the terms are answered in an
order of their own.

Three kinds of contradiction in a settled order: a position fixed at two values,
which contradicts without anything being read; a value the term itself cannot take;
and what the declarations refuse. The order is settled rather than preferred, so
two contradictions of one kind are told apart by where they sit.

Beside that, two names brought up to what they now say. What settles a position of
a value's rules no longer reads its clauses again, so the check that names who may
do it says that instead. And the boundary's own contract now says what the last two
commits made true: parts are added, and within a part the facts are solved together
rather than met afte